# fastapi-async-task-workflow

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  renovate.json5
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: features.md  maintenance.md
.github/workflows/: deploy-docs.yml  lint.yaml  renovate.yaml  test.yaml
backend/: .dockerignore  Dockerfile
backend/app/: pyproject.toml
backend/app/alembic/versions/: 2022-09-25-19-46_60d49bf413b8.py  2022-10-03-18-32_3223652d21bd.py  2022-10-23-04-07_cc36a024e8ed.py  2025-05-10-17-58_9d2ba1dd5f55.py
backend/app/app/: main.py
backend/app/app/api/: celery_task.py  deps.py
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: async_job.py  auth.py  cache.py  natural_language.py  report.py  user.py
backend/app/app/core/: authz.py  celery.py  config.py  security.py
backend/app/app/crud/: __init__.py  user_crud.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/models/: __init__.py  base_uuid_model.py  media_model.py  user_model.py
backend/app/app/schemas/: common_schema.py  user_schema.py
backend/app/app/utils/: minio_client.py  token.py
backend/app/app/utils/exceptions/: __init__.py  common_exception.py
backend/app/app/utils/file_repository/: interface.py  minio_client.py  s3_repository.py
backend/app/test/: conftest.py  test_main.py
backend/app/test/api/: test_async_job.py  test_cache.py  test_login.py  test_report_job.py  test_user.py
caddy/: Caddyfile
docs/: Dockerfile  mkdocs.yml
docs/decisions/: 0000-use-markdown-any-decision-records.md  0001-use-fastapi.md  0002-use-sqlmodel.md  0003-use-celery.md  0004-use-valkey.md  0005-use-postgres.md  0006-use-rabbitmq-for-broker.md
docs/diagrams/Supplemental/: LocalDeployment.md
fastapi-alembic-sqlmodel-async/: pyproject.toml
traefik/: traefik.yml
